--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ document.addEventListener('click', (e) => {
         <li class="skills-item">
           <div class="content-card">
             <figure class="skills-avatar-box">
-              <img src="images/tensorflow.png" alt="TensorFlow" width="60" class="skills-icon">
+              <img src="images/TensorFlow.png" alt="TensorFlow" width="60" class="skills-icon">
             </figure>
             <h4 class="h4 skills-item-title">TensorFlow</h4>
           </div>
