--- a/resume.html
+++ b/resume.html
@@ -449,7 +449,7 @@ document.addEventListener('click', (e) => {
         Build smart AI solutions designed to solve real challenges by leveraging the latest advances in machine learning and data science. My mission is to make technology intuitive and accessible, enabling smarter decisions and better outcomes for businesses and communities.
       </p>
       <div class="social-icons-inline">
-        <a href="https://wa.me/8606230949" target="_blank">
+        <a href="https://wa.me/+918606230949" target="_blank">
           <img src="images/Negative2.png" alt="WhatsApp">
         </a>
         <a href="https://www.instagram.com/__mr_r_k_r__?igsh=MTk0cTV4cjNjMzZoOQ==" target="_blank">
