--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <style>
-    /* .main-content {
+    .main-content {
       width: 100%;
       margin: 0 auto;
       padding: 0 10px;
       display: grid;
       grid-template-rows: auto;
-    } */
+    }
 
     /* 
     .chat-icon {
