--- a/projects.html
+++ b/projects.html
@@ -269,8 +269,9 @@ document.addEventListener('click', (e) => {
     description: "The MCQ Generator is a Flask-based web application designed to automate the creation of multiple-choice questions (MCQs) from various types of text input, including URLs, manually entered text, and file uploads (PDF/TXT). The application leverages advanced Natural Language Processing (NLP) techniques using spaCy to process the input text, identifying key concepts, phrases, and sentence structures. It then employs an LSTM (Long Short-Term Memory) model built with TensorFlow/Keras to further understand the text and generate relevant MCQs. Users can select the number of questions to generate, view the results with the correct answers, and download the MCQs as a PDF using ReportLab. The user interface is designed with Bootstrap for responsiveness, ensuring ease of use on both desktop and mobile devices. This tool is particularly beneficial for educators, students, and content creators, streamlining the quiz creation process and enhancing efficiency. The project combines AI, Deep Learning, and NLP to offer a practical solution in the realm of automated quiz generation, with real-world applications in e-learning platforms, content-driven education tools, and AI-powered assessments.",
     githubLink: "https://github.com/Razalkr70/MCQ-Generator",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/mcq.png",
+       "images/screenshots/mcq1.png",
+         "images/screenshots/mcq2.png"
     ]
   },
   project4: {
@@ -289,8 +290,10 @@ document.addEventListener('click', (e) => {
     description: "The Customer Segmentation project uses Data Science and Machine Learning to classify customers into distinct segments based on their purchasing behaviors and demographic data. The goal is to identify groups of customers who share similar characteristics, allowing businesses to tailor their marketing strategies and product offerings accordingly. The project employs unsupervised learning techniques such as K-means clustering to cluster customers into different segments, based on features like age, income, spending habits, and purchase frequency. The dataset is pre-processed using Pandas for data cleaning and feature engineering, while Scikit-learn is used to implement the machine learning models. Visualization libraries such as Matplotlib and Seaborn are employed to create insightful visualizations of the segments, providing a clear understanding of customer distribution. The model outputs clusters that represent various customer groups, which can be used to create personalized marketing campaigns, optimize inventory management, and improve customer retention strategies. This project is highly valuable for businesses in e-commerce, retail, and customer relationship management (CRM), where understanding customer segments can lead to better decision-making and more effective targeting.",
     githubLink: "https://github.com/Razalkr70/Customer-Segmentation-using-dataset",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/customer.PNG",
+      "images/screenshots/customer1.png",
+       "images/screenshots/customer2.png",
+        "images/screenshots/customer3.png"
     ]
   },
   project6: {
@@ -299,7 +302,7 @@ document.addEventListener('click', (e) => {
     description: "The VoiceBot project is designed to serve as an intelligent virtual assistant within a hospital setting, focusing on providing seamless interactions in the native language. Leveraging Natural Language Processing (NLP) and Speech Recognition technologies, this voice-based assistant allows hospital staff and patients to interact with the system using voice commands in their native language. The system is powered by Python libraries such as SpeechRecognition for speech-to-text conversion, spaCy for NLP tasks, and TensorFlow for any deep learning-based language processing.The assistant can perform tasks such as scheduling appointments, providing patient information, answering common queries related to hospital services, and helping with administrative tasks like room assignments. It also integrates with hospital management systems to assist in real-time data retrieval, providing relevant medical information and guiding staff through operational processes.The VoiceBot's ability to understand and process commands in the local language enhances its accessibility, ensuring that hospital staff and patients who might not be fluent in other languages can still effectively use it. This project is aimed at improving hospital efficiency, reducing the workload on administrative staff, and creating a more intuitive, interactive experience for patients, especially in emergency situations or for non-tech-savvy individuals. The application of AI in this context demonstrates the growing potential of voice-enabled AI systems in healthcare settings, contributing to enhanced patient care and streamlined hospital operations.",
     githubLink: "https://github.com/Razalkr70/Voice-Bot-in-Native-Language",
     screenshots: [
-      "images/screenshots/emotion.PNG",
+      "images/screenshots/bot1.PNG",
       "images/screenshots/emotion1.PNG"
     ]
   },
@@ -309,8 +312,8 @@ document.addEventListener('click', (e) => {
     description: "The AI Thought Bubble Generator is an innovative image augmentation tool that combines Computer Vision, Natural Language Processing (NLP), and image manipulation techniques to enhance user-provided images with AI-generated content. The workflow begins with face detection using Haar Cascades or other deep learning-based algorithms (e.g., MTCNN, Dlib) to accurately locate the head or facial region within an image. Once detected, a thought bubble graphic is dynamically overlaid above the head using OpenCV, ensuring natural positioning and scaling based on facial dimensions.Inside the thought bubble, a short, randomly generated sentence is placed. This text is produced using Natural Language Generation (NLG) models such as GPT-based APIs or rule-based generators, which create phrases that are humorous, expressive, or imaginative. Users also have the flexibility to input custom text if preferred. The final output is a composited image that appears as if the subject is  the displayed text.This project demonstrates an engaging use of AI-driven creativity, merging visual processing and generative language models. It finds real-world applications in digital storytelling, educational content creation, social media personalization, and interactive art platforms, making it a fun and technically rich tool for visual expression.",
     githubLink: "https://github.com/Razalkr70/Thought-Bubble-Generator-on-Image",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/bub1.PNG",
+      "images/screenshots/bub2.PNG"
     ]
   },
   project8: {
@@ -319,8 +322,9 @@ document.addEventListener('click', (e) => {
     description: "The Stock Market Prediction project aims to forecast stock prices using historical data retrieved through the Yahoo Finance (yfinance) API. The application utilizes machine learning models, such as Long Short-Term Memory (LSTM) networks, to capture the temporal dependencies in stock price movements. After preprocessing steps like handling missing values, scaling data with MinMaxScaler, and structuring time series windows, the model is trained on historical closing prices to predict future trends. The system generates predictions for the next 10 days and next 1 day, which are visualized using Matplotlib and Seaborn for intuitive interpretation. Multiple plots are included: (1) a closing price plot showing the overall trend, (2) a moving average plot to smooth fluctuations and highlight patterns, and (3) a comparison graph of actual vs. predicted prices to evaluate model performance. This project integrates deep learning with financial data analysis and showcases how AI can be applied in algorithmic trading, investment strategy planning, and risk management.",
     githubLink: "https://github.com/Razalkr70/Stock-Market-Prediction",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/stock1.PNG",
+      "images/screenshots/stock2.PNG",
+      "images/screenshots/stock3.PNG",
     ]
   },
   project9: {
