--- a/projects.html
+++ b/projects.html
@@ -249,8 +249,9 @@ document.addEventListener('click', (e) => {
     description: "This project leverages advanced techniques in computer vision, deep learning, and machine learning to analyze and interpret the emotional state of a crowd in real-time. Using a camera system, facial expressions within the crowd are captured and processed using Convolutional Neural Networks (CNNs), which are trained to detect emotions such as happiness, anger, sadness, and surprise. CNNs are highly effective for image recognition tasks, making them the ideal choice for facial emotion detection.The system processes the captured data using pre-trained models and transfer learning, which allows the system to adapt quickly and effectively to various environments. It employs image preprocessing techniques like face detection and feature extraction to ensure high accuracy in emotion recognition.Real-time data analysis is facilitated by Python and libraries like OpenCV and TensorFlow, ensuring fast and efficient processing of visual inputs. The system analyzes the emotional state of the crowd over short intervals (2-5 minutes) and generates feedback on crowd behavior, offering insights into the overall mood and emotional shifts during events. This technology has a wide range of applications, including event management, where it can monitor crowd moods and ensure a smooth event experience, public safety in places like airports or stadiums by detecting potential threats through emotional shifts, and customer sentiment analysis to gauge reactions in retail environments, enabling more effective marketing strategies. Additionally, it can be used in human-computer interaction to tailor responses in customer service systems based on emotional feedback, enhancing user experience across various industries.",
     githubLink: "https://github.com/Razalkr70/crowd-facial-emotion-detection-using-CNN",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/WhatsApp Image 2025-06-20 at 3.02.09 PM (1).jpeg",
+      
+      "images/screenshots/WhatsApp Image 2025-06-20 at 3.02.09 PM.jpeg"
     ]
   },
   project2: {
@@ -280,8 +281,8 @@ document.addEventListener('click', (e) => {
     description: "The Emotion-Based Story Recommender is a dynamic system that utilizes Computer Vision and Machine Learning to recommend personalized stories based on the user’s emotional state. The process begins by capturing the user's facial expression through a camera, where Convolutional Neural Networks (CNN) are used to analyze the facial features and identify emotions like happiness, sadness, anger, surprise, etc. After detecting the emotion, the system communicates with a database or an API that hosts a collection of stories categorized by themes or emotional tones. Based on the detected emotion, the system matches the appropriate stories to the user’s emotional state and presents them with personalized recommendations. This project incorporates deep learning for emotion recognition, NLP for text-based story classification, and real-time media recommendations, creating an interactive experience for the user. The recommender could be further enhanced with a feedback mechanism to refine future story suggestions. Potential real-world applications include personalized content delivery in mental health platforms, interactive learning environments, and entertainment systems where emotional engagement is essential. By leveraging AI-driven emotion analysis, this project exemplifies how emotion-aware systems can enhance user experiences in real-time, offering a more immersive and emotionally intelligent interaction.",
     githubLink: "https://github.com/Razalkr70/emotion-story-recommender",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/story1.PNG",
+      "images/screenshots/story2.PNG"
     ]
   },
   project5: {
@@ -303,7 +304,7 @@ document.addEventListener('click', (e) => {
     githubLink: "https://github.com/Razalkr70/Voice-Bot-in-Native-Language",
     screenshots: [
       "images/screenshots/bot1.PNG",
-      "images/screenshots/emotion1.PNG"
+       "images/screenshots/bot3.PNG"
     ]
   },
   project7: {
@@ -324,7 +325,7 @@ document.addEventListener('click', (e) => {
     screenshots: [
       "images/screenshots/stock1.PNG",
       "images/screenshots/stock2.PNG",
-      "images/screenshots/stock3.PNG",
+      "images/screenshots/stock3.PNG"
     ]
   },
   project9: {
@@ -333,8 +334,8 @@ document.addEventListener('click', (e) => {
     description: "A business intelligence dashboard built using PowerBI to track sales data and trends.This project involves building an interactive sales performance dashboard using Microsoft Power BI. By importing sales data from an Excel file, the dashboard visually showcases key business metrics such as total sales, profit, and quantity sold using card visuals. Users can filter the data by date, category, region, and customer type through slicers. Various charts—including line charts for sales trends, bar charts for top products, donut charts for regional sales, and stacked column charts for customer type analysis—provide comprehensive insights into business performance. This dashboard empowers decision-makers to analyze trends, identify opportunities, and make informed business decisions.",
     githubLink: "https://github.com/Razalkr70/Sales-Customer-Behavior-Dashboard-using-PowerBI",
     screenshots: [
-      "images/screenshots/emotion.PNG",
-      "images/screenshots/emotion1.PNG"
+      "images/screenshots/powerbi.PNG"
+     
     ]
   }
 };
