--- a/projects.html
+++ b/projects.html
@@ -271,8 +271,8 @@ document.addEventListener('click', (e) => {
     githubLink: "https://github.com/Razalkr70/MCQ-Generator",
     screenshots: [
       "images/screenshots/mcq.png",
-       "images/screenshots/mcq1.png",
-         "images/screenshots/mcq2.png"
+       "images/screenshots/mcq1.PNG",
+         "images/screenshots/mcq2.PNG"
     ]
   },
   project4: {
