--- a/index.html
+++ b/index.html
@@ -130,15 +130,17 @@
           <!-- Work Timeline -->
           <div class="tab-content" id="work">
             <div class="timeline-item">
-              <h3>Junior Software Engineer</h3>
-              <span>Dhooma Technologies | 2024</span>
-              <p>Worked on backend and AI-based systems with a focus on scalable web architecture.</p>
-            </div>
+  <h3>Junior Software Engineer</h3>
+  <span>Dhooma Technologies | OCT 2024-FEB 2025</span>
+  <p>Contributed to the development of dynamic, database-driven web applications and backend services. Focused on RESTful API integration, server-side logic, and performance optimization of web architectures.</p>
+</div>
+
             <div class="timeline-item">
-              <h3>Data Scientist</h3>
-              <span>Softroniics | 2025 - Present</span>
-              <p>Built full-stack web apps and automation tools for startups and clients globally.</p>
-            </div>
+  <h3>Data Scientist</h3>
+  <span>Softroniics | MARCH 2025 – Present</span>
+  <p>Worked across core AI domains including Deep Learning, Natural Language Processing (NLP), and Data Science to develop intelligent solutions for real-world problems. Built and deployed machine learning models, created predictive analytics dashboards in Power BI, and contributed to scalable backend systems for data-driven applications.</p>
+</div>
+
           </div>
 
           <!-- Certificates Timeline -->
