--- a/blog.html
+++ b/blog.html
@@ -230,7 +230,7 @@
         <li class="blog-post-item">
           <a href="javascript:void(0);" class="modalTrigger" data-modal="modal-3">
             <figure class="blog-banner-box">
-              <img src="images/blog1.jpg" alt="Power BI Sales Dashboard" loading="lazy">
+              <img src="images/A modern business dashboard interface on a laptop screen with colorful charts, graphs, and KPI cards — focused on sales trends and regional performance. The background shows an office desk with minimal stationery and .jpg" alt="Power BI Sales Dashboard" loading="lazy">
             </figure>
             <div class="blog-content">
               <h3 class="h3 blog-item-title">Creating a Dynamic Sales Dashboard with Power BI</h3>
