--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
           <div class="tab-content" id="work">
             <div class="timeline-item">
   <h3>Junior Software Engineer</h3>
-  <span>Dhooma Technologies | OCT 2024-FEB 2025</span>
-  <p>Contributed to the development of dynamic, database-driven web applications and backend services. Focused on RESTful API integration, server-side logic, and performance optimization of web architectures.</p>
+  <span>Dhooma Technologies | 2024</span>
+  <p> Developed and maintained Python-based applications. Involved in full-stack development, bug fixing, and performance improvements of web-based projects.</p>
 </div>
 
             <div class="timeline-item">
   <h3>Data Scientist</h3>
-  <span>Softroniics | MARCH 2025 – Present</span>
-  <p>Worked across core AI domains including Deep Learning, Natural Language Processing (NLP), and Data Science to develop intelligent solutions for real-world problems. Built and deployed machine learning models, created predictive analytics dashboards in Power BI, and contributed to scalable backend systems for data-driven applications.</p>
+  <span>Softroniics | 2025 – Present</span>
+  <p> Working on machine learning and deep learning projects involving data preprocessing, model development, evaluation, and deployment for production-level use cases.</p>
 </div>
 
           </div>
