--- a/projects.html
+++ b/projects.html
@@ -176,6 +176,7 @@
 <div id="screenshotModal" class="modal" style="display: none;">
   <div class="modal-content">
     <span class="close" onclick="closeScreenshotModal()">&times;</span>
+<p class="click-hint">Click on the image to expand and view in detail</p>
 
     <div class="swiper mySwiper">
       <div class="swiper-wrapper" id="screenshotSwiperWrapper">
